1. Collection API Улучшения[#108685]