@@ -9,10 +9,10 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         Departments deps = new Departments();
-        List<String> input = Arrays.asList("k1/sk1");
-        List<Departments.Org> expect = Arrays.asList(
-                new Departments.Org(Arrays.asList("k1")),
-                new Departments.Org(Arrays.asList("k1", "sk1"))
+        List<String> input = List.of("k1/sk1");
+        List<Departments.Org> expect = List.of(
+                new Departments.Org(List.of("k1")),
+                new Departments.Org(List.of("k1", "sk1"))
         );
         List<Departments.Org> result = deps.convert(input);
         assertThat(result, is(expect));
@@ -21,9 +21,9 @@ public class DepartmentsTest {
     @Test
     public void whenMissedTwo() {
         Departments deps = new Departments();
-        List<String> input = Arrays.asList("k1");
-        List<Departments.Org> expect = Arrays.asList(
-                new Departments.Org(Arrays.asList("k1"))
+        List<String> input = List.of("k1");
+        List<Departments.Org> expect = List.of(
+                new Departments.Org(List.of("k1"))
         );
         List<Departments.Org> result = deps.convert(input);
         assertThat(result, is(expect));
@@ -32,10 +32,10 @@ public class DepartmentsTest {
     @Test
     public void whenMissedThree() {
         Departments deps = new Departments();
-        List<String> input = Arrays.asList("k2/sk1");
-        List<Departments.Org> expect = Arrays.asList(
-                new Departments.Org(Arrays.asList("k2")),
-                new Departments.Org(Arrays.asList("k2", "sk1"))
+        List<String> input = List.of("k2/sk1");
+        List<Departments.Org> expect = List.of(
+                new Departments.Org(List.of("k2")),
+                new Departments.Org(List.of("k2", "sk1"))
         );
         List<Departments.Org> result = deps.convert(input);
         assertThat(result, is(expect));
@@ -44,11 +44,11 @@ public class DepartmentsTest {
     @Test
     public void whenMissedFour() {
         Departments deps = new Departments();
-        List<String> input = Arrays.asList("k1", "k2/sk1");
-        List<Departments.Org> expect = Arrays.asList(
-                new Departments.Org(Arrays.asList("k1")),
-                new Departments.Org(Arrays.asList("k2")),
-                new Departments.Org(Arrays.asList("k2", "sk1"))
+        List<String> input = List.of("k1", "k2/sk1");
+        List<Departments.Org> expect = List.of(
+                new Departments.Org(List.of("k1")),
+                new Departments.Org(List.of("k2")),
+                new Departments.Org(List.of("k2", "sk1"))
         );
         List<Departments.Org> result = deps.convert(input);
         assertThat(result, is(expect));
@@ -57,11 +57,11 @@ public class DepartmentsTest {
     @Test
     public void whenAsc() {
         Departments deps = new Departments();
-        List<String> input = Arrays.asList("k1/sk1", "k2");
-        List<Departments.Org> expect = Arrays.asList(
-                new Departments.Org(Arrays.asList("k1")),
-                new Departments.Org(Arrays.asList("k1", "sk1")),
-                new Departments.Org(Arrays.asList("k2"))
+        List<String> input = List.of("k1/sk1", "k2");
+        List<Departments.Org> expect = List.of(
+                new Departments.Org(List.of("k1")),
+                new Departments.Org(List.of("k1", "sk1")),
+                new Departments.Org(List.of("k2"))
         );
         List<Departments.Org> result = deps.sortAsc(deps.convert(input));
         assertThat(result, is(expect));
@@ -70,11 +70,11 @@ public class DepartmentsTest {
     @Test
     public void whenDesc() {
         Departments deps = new Departments();
-        List<String> input = Arrays.asList("k1/sk1", "k2");
-        List<Departments.Org> expect = Arrays.asList(
-                new Departments.Org(Arrays.asList("k2")),
-                new Departments.Org(Arrays.asList("k1")),
-                new Departments.Org(Arrays.asList("k1", "sk1"))
+        List<String> input = List.of("k1/sk1", "k2");
+        List<Departments.Org> expect = List.of(
+                new Departments.Org(List.of("k2")),
+                new Departments.Org(List.of("k1")),
+                new Departments.Org(List.of("k1", "sk1"))
         );
         List<Departments.Org> result = deps.sortDesc(deps.convert(input));
         assertThat(result, is(expect));
